--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,9 @@
     <string name="tv_level">Level: 1</string>
     <string name="tv_number">0</string>
     <string name="number_input_hint">What was the number?</string>
-    <string name="confirm">Confirm</string>
+    <string name="confirm_btn">Confirm</string>
+    <string name="start_btn">Start</string>
+    <string name="memory_game">Memory Game</string>
+    <string name="game_instructions">The game will show you a number, your task is to remember it. As the levels go on, the number will become longer and longer. Try your best to remember them and reach the highest point! Click the start button to start the game.</string>
+    <string name="setting_btn">Setting</string>
 </resources>
